kubernetes/apps/kube-system/cilium/gateway/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.unscfleet.com
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.30.33
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.unscfleet.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.unscfleet.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: unscfleet-com-tls

    # MQTT
    - name: mqtt-tcp
      protocol: TCP
      port: 1883
      allowedRoutes:
        namespaces:
          from: All

    # TELEPORT
    - name: teleport-cluster-http
      protocol: HTTP
      port: 80
      hostname: teleport.unscfleet.com
      allowedRoutes:
        namespaces:
          from: All

    - name: teleport-cluster-https
      protocol: TLS
      port: 443
      hostname: teleport.unscfleet.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough

    - name: teleport-cluster-wild-http
      protocol: HTTP
      port: 80
      hostname: "*.teleport.unscfleet.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: teleport-cluster-wild-https
      protocol: TLS
      port: 443
      hostname: "*.teleport.unscfleet.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
